Aggiunto supporto docker-compose

--- a/NET5.JWT.CustomUser/appsettings.json
+++ b/NET5.JWT.CustomUser/appsettings.json
@@ -1,6 +1,8 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=3P-NB001\\SQLEXPRESS;Database=NET5.JWT.CustomUser;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection1": "Server=3P-NB001\\SQLEXPRESS;Database=NET5.JWT.CustomUser;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "DefaultConnection2": "Server=192.168.16.32\\SQLEXPRESS;Database=NET5.JWT.CustomUser;User=user;Password=Password1!",
+    "DefaultConnection": "Server=db;Database=NET5.JWT.CustomUser;User=sa;Password=Password1!;"
   },
   "Logging": {
     "LogLevel": {
